[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DHEater"
version = "0.5.0"
description = "D(HE)ater is the proof-of-concept implementation of the D(HE)at attack (CVE-2002-20001) against TLS and SSH"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Szilárd Pfeiffer"},
]
maintainers = [
    {name = "Szilárd Pfeiffer", email = "coroner@pfeifferszilard.hu"},
]
keywords = ["dhe", "denial-of-service", "tls", "ssh"]
requires-python = ">=3.9"
dependencies = [
    "asn1crypto",
    "attrs>=19.2.0",
    "cryptolyzer==1.0.0",
    "urllib3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Testing :: Traffic Generation",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://dheatattack.com/dheater"
Repository = "https://gitlab.com/dheatattack/dheater"
Issues = "https://gitlab.com/dheatattack/dheater/-/issues"
"Technical paper" = "https://ieeexplore.ieee.org/document/10374117"

[project.scripts]
dheat = "dheater.__main__:main"
dh_param_priv_key_size_setter = "dheater.dh_param_priv_key_size_setter:main"

[project.optional-dependencies]
test = ["unittest2", "coverage", "six"]
pep8 = ["flake8"]
pylint = ["pylint"]
dev = ["tox"]

[tool.setuptools]
packages = ["dheater"]
